Bridge: JNI init

--- a/native/native.vcxproj
+++ b/native/native.vcxproj
@@ -93,6 +93,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <ModuleDefinitionFile>native.def</ModuleDefinitionFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -140,10 +141,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="native.h" />
     <ClInclude Include="org_itxtech_mirainative_Bridge.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="native.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="native.def" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
