--- a/native/native.vcxproj
+++ b/native/native.vcxproj
@@ -143,12 +143,16 @@
   <ItemGroup>
     <ClInclude Include="native.h" />
     <ClInclude Include="org_itxtech_mirainative_Bridge.h" />
+    <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="native.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="native.def" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="native.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
