--- a/native/native.vcxproj
+++ b/native/native.vcxproj
@@ -32,7 +32,7 @@
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -71,14 +71,16 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Program Files\Java\jdk-11.0.6\include\win32;C:\Program Files\Java\jdk-11.0.6\include;$(IncludePath)</IncludePath>
-    <ReferencePath>C:\Program Files\Java\jdk-11.0.6\lib;$(ReferencePath)</ReferencePath>
+    <IncludePath>C:\Program Files %28x86%29\Java\jdk1.8.0_241\include\win32;C:\Program Files %28x86%29\Java\jdk1.8.0_241\include;$(IncludePath)</IncludePath>
+    <ReferencePath>C:\Program Files %28x86%29\Java\jdk1.8.0_241\include\win32;C:\Program Files %28x86%29\Java\jdk1.8.0_241\include;$(ReferencePath)</ReferencePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>C:\Program Files %28x86%29\Java\jdk1.8.0_241\include\win32;C:\Program Files %28x86%29\Java\jdk1.8.0_241\include;$(IncludePath)</IncludePath>
+    <ReferencePath>C:\Program Files %28x86%29\Java\jdk1.8.0_241\include\win32;C:\Program Files %28x86%29\Java\jdk1.8.0_241\include;$(ReferencePath)</ReferencePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
