--- a/build.gradle
+++ b/build.gradle
@@ -6,19 +6,21 @@ group 'org.itxtech'
 version '1.0-SNAPSHOT'
 
 repositories {
-    maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
+    jcenter()
     mavenCentral()
+    maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
+    maven { url 'https://dl.bintray.com/him188moe/mirai' }
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3"
-    //implementation "net.mamoe:mirai-core"
-    //implementation "net.mamoe:mirai-console"
-    implementation files("libs/mirai-console-terminal-0.21.0-all.jar")
+
+    implementation 'net.mamoe:mirai-core-jvm:0.21.0'
+    implementation "net.mamoe:mirai-console:0.1.1"
 }
 
-jar{
+jar {
 
 }
 
