Native: process message

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,4 +2,4 @@ name: MiraiNative
 main: org.itxtech.mirainative.MiraiNative
 version: 1.0.0
 author: iTX Technologies
-info: CoolQ Plugin Bridge for Mirai
+info: Write Mirai Plugins using Native Code
