--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: MiraiNative
 main: org.itxtech.mirainative.MiraiNative
-version: 1.0.0
+version: 1.0.1
 author: iTX Technologies
-info: Write Mirai Plugins using Native Code
+info: 使用原生代码编写 Mirai 插件。
