--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,4 +2,4 @@ name: MiraiNative
 main: org.itxtech.mirainative.MiraiNative
 version: 1.9.0-rc.1
 author: iTX Technologies
-info: 强大的 Mirai 原生插件加载器
+info: 强大的 mirai 原生插件加载器
