--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: MiraiNative
 main: org.itxtech.mirainative.MiraiNative
-version: 1.9.0-rc.3
+version: 1.9.0
 author: iTX Technologies
 info: 强大的 mirai 原生插件加载器
