mirai: update to 2.0-M1

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,8 @@
 pluginManagement {
     repositories {
+        jcenter()
         maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
-
         mavenCentral()
-
         maven { url 'https://plugins.gradle.org/m2/' }
     }
 }
