--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,7 @@
 pluginManagement {
     repositories {
-        jcenter()
-        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
         mavenCentral()
+        maven { url 'https://maven.aliyun.com/repository/public' }
         maven { url 'https://plugins.gradle.org/m2/' }
     }
 }
