--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,6 @@ jobs:
         with:
           msbuild-architecture: x64
 
-      - name: MSBuild
+      - name: Native Build
         working-directory: native
-        run: msbuild native.sln -t:rebuild -p:Configuration=Release,OutDir=build/Native,AdditionalLibPaths="$(JAVA_HOME)/include;$(JAVA_HOME)/include/win32";
+        run: msbuild native.sln -t:rebuild -p:Configuration=Release,OutDir=build\Native,AdditionalLibPaths="$env:JAVA_HOME\include;$env:JAVA_HOME\include\win32";
