--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,4 +22,4 @@ jobs:
 
       - name: Native Build
         working-directory: native
-        run: msbuild native.sln -t:rebuild -p:Configuration=Release,OutDir=build\Native,AdditionalLibPaths="$env:JAVA_HOME\include;$env:JAVA_HOME\include\win32";
+        run: msbuild native.sln -t:rebuild -p:Configuration=Release,OutDir=build\Native,AdditionalLibPaths="$env:JAVA_HOME\include;$env:JAVA_HOME\include\win32;"
