--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,4 +27,4 @@ jobs:
           -t:rebuild 
           -p:Configuration=Release 
           -p:OutDir=build\native 
-          -p:AdditionalLibPaths="$env:JAVA_HOME\include;$env:JAVA_HOME\include\win32;"
+          -p:ReferencePath="$env:JAVA_HOME\include;$env:JAVA_HOME\include\win32;"
