--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,4 +28,4 @@ jobs:
           -p:Configuration=Release|x86
           -p:OutDir=build\native
         env:
-          ADDITIONAL_INCLUDE_PATH: %JAVA_HOME%\include;%JAVA_HOME%\include\win32;
+          ADDITIONAL_INCLUDE_PATH: '%JAVA_HOME%\include;%JAVA_HOME%\include\win32;'
