--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
         run: >
           msbuild native.sln
           -t:rebuild
-          -p:Configuration=Release|x86
-          -p:OutDir=build\native
+          -p:Configuration='Release|x86'
+          -p:OutDir='build\native'
         env:
           ADDITIONAL_INCLUDE_PATH: '%JAVA_HOME%\include;%JAVA_HOME%\include\win32;'
