--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,6 @@ jobs:
           msbuild native.sln
           -t:rebuild
           -p:Configuration=Release
-          -p:PlatformTarget=x86
+          -p:Platform=x86
           -p:OutDir='build\native'
-        env:
-          ADDITIONAL_INCLUDE_PATHS: '%JAVA_HOME%\include;%JAVA_HOME%\include\win32;'
+          -p:AdditionalLibPaths='$(JAVA_HOME)\include;$(JAVA_HOME)\include\win32;'
