--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,3 +31,4 @@ jobs:
           -p:OutPath='build\native\'
           -p:AdditionalLibPaths='"$(JAVA_HOME)\include;$(JAVA_HOME)\include\win32;"'
           -p:AdditionalIncludePaths='"$(JAVA_HOME)\include;$(JAVA_HOME)\include\win32;"'
+          -p:AdditionalLibraryDirectories='"$(JAVA_HOME)\include;$(JAVA_HOME)\include\win32;"'
