--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
           -p:Configuration=Release
           -p:Platform=x86
           -p:AssemblyName=CQP
-          -p:OutPath='build\native\'
+          -p:OutPath='..\build\native\'
 
       - name: Native Upload
         uses: actions/upload-artifact@v3
